# inwords

./: README.md  setup.cfg  setup.py
inwords/: __init__.py  words.py
inwords.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
